--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Pixeden Template",
+  "name": "TemplateInit",
   "version": "1.0.0",
   "description": "Starting project templatez",
   "main": "index.js",
