--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
-  "name": "Sassisfaction ",
-  "version": "1.0.0",
+  "name": "Sassisfaction",
+  "version": "1.5.0",
   "description": "Awesome Sass Resources",
   "main": "index.js",
+  "scripts": {
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+  },
+  "author": "Lionel T <elrumordelaluz@hotmail.com> (elrumordelaluz.com)",
+  "license": "ISC",
   "repository": {
     "type": "git",
     "url": "https://github.com/elrumordelaluz/Sassisfaction.git"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.0"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "del": "^1.1.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-changed": "^1.1.1",
-    "gulp-concat": "^2.4.3",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-filter": "^2.0.1",
-    "gulp-imagemin": "^2.2.0",
-    "gulp-jade": "^0.11.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-livereload": "^3.7.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-svgmin": "^1.1.0",
-    "gulp-uglify": "^1.1.0",
-    "gulp-uncss": "^1.0.0",
-    "jshint-stylish": "^1.0.0",
-    "main-bower-files": "^2.5.0",
-    "marked": "^0.3.3",
-    "react": "^0.13.3",
-    "reactify": "^1.1.1",
-    "svgo": "^0.5.0"
-  },
-  "devDependencies": {}
+    "babel-preset-stage-1": "^6.1.18",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3"
+  }
 }
